# practical-expander-decomposition

./: .bazelrc  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  WORKSPACE  build.sh  debug.sh  format-code.sh  format.sh  test.sh
experiment/: .gitignore  Makefile  README.md  configure  cut_dumbbell.py  gen_graph.py  parse_snap_graph.py  parse_stan_graph.py  partition_cliques.py  run.py
experiment/eval/: commons.py  plot.py  runtime.py  runtime_shares.py
experiment/graphs/: configure  download_graphs.py  parse_mtx_graph.py
experiment/scripts/: bench_header.sh  bench_margulis.sh  bench_snap.sh  bench_walshaw.sh  certificate.py  cut_balance.py  cut_conductivity.py  cut_header.sh  cut_potential.py  cut_real.sh  edc_real.sh  expander_conductivity.py  expander_potential.py  expected_edges_cut.py  iterations_until_cut.py  iterations_until_cut_final.py  iterations_until_cut_random_walk.py  iterations_until_expander.py  param_eval.py  partitions_and_edges_cut.py  potential.py  t1_vs_t2.py
lib/: BUILD  cut_matching.cpp  cut_matching.hpp  expander_decomp.cpp  expander_decomp.hpp  graph.cpp  graph.hpp  partition_graph.cpp  partition_graph.hpp  sparse_cut_heuristics.cpp  sparse_cut_heuristics.hpp  trimming.cpp  trimming.hpp  ugraph.cpp  ugraph.hpp  unit_flow.cpp  unit_flow.hpp  util.hpp
lib/datastructures/: linkcut.cpp  linkcut.hpp  (+8 more)
main/: BUILD  cluster.cpp  cut.cpp  edc.cpp  edc_bench.cpp  edc_cut.cpp  expander_decomp.cpp  util.hpp
test/: BUILD  cut_matching_test.cpp  expander_decomp_test.cpp  partition_graph_test.cpp  ugraph_test.cpp  unit_flow_test.cpp
(+28 files in other folders)
